--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+.img{
+  width:100%;
+  height:500px; 
+ 
+}
+.img-1{
+  width:100%;
+  height:300px;
+  border-bottom: 3px solid #2b8a3e;
+}
+.c-01{
+  box-shadow: 10px 10px 5px rgb(241, 245, 239);
+}
+.nav{
+  background-color: #2b8a3e;
+}
+.btn-1{
+margin-right: 50px;
+}
+.nav-1{
+  margin-left: 50px;
+}
+.list{
+  list-style-type: none;
+  color: rgb(112, 109, 109);
+}
+
