--- a/src/App.css
+++ b/src/App.css
@@ -42,14 +42,12 @@
  
 }
 .img-1{
-  width:100%;
-  height:300px;
   border-bottom: 3px solid #2b8a3e;
 }
 .c-01{
   box-shadow: 10px 10px 5px rgb(241, 245, 239);
 }
-.nav{
+.navi{
   background-color: #2b8a3e;
 }
 .btn-1{
